--- a/title-block.html
+++ b/title-block.html
@@ -31,7 +31,7 @@
 
   <!-- use the particle js library with our own config (json file). -->
   <script>
-      particlesJS.load('particles-js', 'particles.json', function() {
+      particlesJS.load('particles-js', '/particles.json', function() {
     console.log('Particles.js config loaded');
   });
   </script>
